# routes/api.php
@@ -92,6 +92,7 @@ Route::middleware(['auth:sanctum', 'user.active'])->group(function () {
     Route::get('/bookings', [BookingController::class, 'index']);
     Route::post('/bookings', [BookingController::class, 'store']);
     Route::get('/bookings/{booking}', [BookingController::class, 'show']);
+    Route::post('/bookings/{booking}/pay', [BookingController::class, 'pay']);
     Route::delete('/bookings/{booking}', [BookingController::class, 'destroy']);
 
 
